feat(consumer-v2): PR3.4 — engines wiring on top of ConsumerProcessor
Slice 3.3 split the v1 monolithic ConsumerStateStore abstract class into
the v2 SPI composition (ConsumerProcessor + ConsumerLock +
ConsumerStateStore + SagaStateStore + DeadEventQueue + DedupeStore).
Slice 3.4 ports the bundle-side engines on top of that surface and
wires an opt-in path through EventoBundle.Builder.

evento-bundle/src/main/java/com/evento/application/consumer/v2/
  ProjectorEngine, SagaEngine, ObserverEngine
    Line-by-line ports of the v1 ProjectorEvenConsumer /
    SagaEventConsumer / ObserverEventConsumer. The per-event dispatch
    body is identical so @EventHandler / @SagaEventHandler observable
    behaviour is preserved. The only change is the consume source:
    consumerStateStore.consumeEventsForXxx(...) becomes
    consumerProcessor.consumeEventsForXxx(...). Each engine implements
    the new ConsumerHandle interface so the admin lookup SPI is
    type-agnostic to v1 vs v2.

  EngineSupervisor
    Owns the virtual-thread executor that runs every engine. Replaces
    the four `new Thread(c).start()` calls in v1. Stop with a bounded
    deadline: shutdown -> awaitTermination -> shutdownNow. Sleep.apply
    inside the consume loop is interruptible so termination is clean
    even from deep inside an idle window.

    PLAN.md called for StructuredTaskScope.ShutdownOnFailure. On JDK 25
    the stable scope API requires the owner thread to open and close
    the scope, and close() auto-joins all subtasks. That fits short-
    lived parallel fan-out, not long-running background loops that
    outlive any single method. The load-bearing property the plan was
    after — "no orphan threads, bounded stop" — is delivered here by
    the executor model. Engines wanting bounded fan-out within a single
    batch can still open their own scope inside run().

  ConsumerEngineConfig
    Record carrying the three v2 pieces the engines + admin surface
    need: ConsumerProcessor, Consume